--- a/components/popup/index.wxss
+++ b/components/popup/index.wxss
@@ -1,7 +1,9 @@
 .mask {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.3);
   opacity: 0;
   transition: opacity .2s ease;
@@ -15,7 +17,7 @@
   left: 50%;
   bottom: 0; 
   padding-bottom: env(safe-area-inset-bottom);
-  width: 100%;
+  width: 100vw;
   max-width: 100vh;
   max-height: 100vh;
   border-radius: 10px 10px 0 0;
