--- a/pages/subpages/home/media/note/components/note-item/index.wxss
+++ b/pages/subpages/home/media/note/components/note-item/index.wxss
@@ -4,8 +4,6 @@
 }
 
 .author-info-wrap {
-  display: flex;
-  align-items: center;
   padding: 0 24rpx;
   height: 100rpx;
 }
@@ -43,6 +41,10 @@
 .follow-btn.invalid {
   color: #b2b2b2;
   background: #f1f1f1;
+}
+.more-icon {
+  width: 50rpx;
+  height: 50rpx;
 }
 
 .note-imgs {
