--- a/pages/subpages/home/media/live/live-play/components/play-room/components/live-play/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/play-room/components/live-play/index.wxml
@@ -1,6 +1,6 @@
 <live-player 
   id="live-player" 
-  class="player {{horizontal ? 'horizontal' : ''}}" 
+  class="live-player {{horizontal ? 'horizontal' : ''}}" 
   style="top: {{horizontal ? ('calc(260rpx + ' + statusBarHeight + 'px)') : 0}};"
   src="{{src}}" 
   autoplay 
