--- a/pages/subpages/home/media/live/components/anchor-capsule/index.wxss
+++ b/pages/subpages/home/media/live/components/anchor-capsule/index.wxss
@@ -9,8 +9,8 @@
 }
 
 .anchor-avatar {
-  width: 27px;
-  height: 27px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
 }
 
@@ -30,11 +30,10 @@
 }
 
 .follow-btn {
-  width: 27px;
-  height: 27px;
+  padding: 0 10px;
+  height: 26px;
   color: #fff;
-  font-size: 10px;
-  line-height: 1;
-  border-radius: 50%;
+  font-size: 11px;
+  border-radius: 13px;
   background: #EE3769;
 }
