--- a/pages/subpages/home/media/live/live-play/components/play-room/components/live-play/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/play-room/components/live-play/index.wxss
@@ -1,9 +1,9 @@
-.player {
+.live-player {
   position: absolute;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.player.horizontal {
+.live-player.horizontal {
   height: 426rpx;
 }
