--- a/pages/subpages/home/media/live/live-play/components/play-room/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/play-room/index.wxss
@@ -25,10 +25,12 @@
   display: flex;
   align-items: center;
   width: fit-content;
+  padding-left: 32px;
   height: 44px;
 }
 .anchor-capsule-wrap.full-screen {
   justify-content: space-between;
+  padding-left: 0;
   width: 100%;
 }
 .activity-wrap {
