--- a/pages/subpages/home/media/live/live-push/components/push-room/index.wxml
+++ b/pages/subpages/home/media/live/live-push/components/push-room/index.wxml
@@ -1,6 +1,6 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
-<live-pusher src="{{roomInfo.pushUrl || ''}}" start="{{start}}" stop="{{stop}}">
+<pusher src="{{roomInfo.pushUrl || ''}}" start="{{start}}" stop="{{stop}}">
   <view class="praise-animation-wrap {{roomInfo.direction === 2 ? 'horizontal' : ''}}">
     <praise-animation count="{{praiseCount || 0}}" manual="{{manualPraise}}" />
   </view>
@@ -58,7 +58,7 @@
       </view>
     </view>
   </view>
-</live-pusher>
+</pusher>
 
 <goods-shelves-popup wx:if="{{goodsShelvesPopupVisible}}" bind:hide="hideModal" />
 <share-popup wx:if="{{sharePopupVisible}}" bind:showPosterModal="showPosterModal" bind:hide="hideModal" />
