--- a/pages/subpages/home/media/live/live-play/components/play-room/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/play-room/index.wxss
@@ -6,75 +6,62 @@
 .room.show {
   opacity: 1;
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
 .inner-wrap {
   position: relative;
   width: 100%;
   height: 100%;
 }
-.inner {
-  background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 10%, rgba(0,0,0,0) 90%, rgba(0,0,0,0.6) 100%);
-}
-.top-part {
+
+.praise-animation-wrap {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
+  right: 0;
+  bottom: calc(57px + env(safe-area-inset-bottom));
 }
-.anchor-capsule-wrap {
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  padding-left: 32px;
-  height: 44px;
-}
-.anchor-capsule-wrap.full-screen {
-  justify-content: space-between;
-  padding-left: 0;
-  width: 100%;
-}
-.activity-wrap {
-  display: flex;
-  justify-content: space-between; 
-  margin-top: 4rpx;
-}
-.room-id-capsule-wrap {
-  display: flex; 
-  flex-direction: column; 
-  align-items: flex-end;
-}
-.room-id-capsule {
-  display: flex;
-  align-items: center;
-  padding: 0 15rpx;
-  height: 44rpx;
-  color: #fff;
-  font-size: 22rpx;
-  line-height: 1;
-  border-radius: 22rpx;
-  background: rgba(0, 0, 0, 0.3);
-  border: 1rpx solid rgba(255,255,255,0.3);
+.praise-animation-wrap.full-screen {
+  right: 22px;
 }
 
-.full-screen-icon{
+.inner {
   position: absolute;
+  left: 8px;
+  right: 8px;
+  bottom: calc(8px + env(safe-area-inset-bottom));
+}
+.inner.full-screen {
+  left: 30px;
+  right: 30px;
+}
+
+.nav-bar {
+  position: absolute;
+  padding-left: 32px;
+  width: 100%;
+  height: 44px;
+}
+.nav-bar.full-screen {
+  padding-left: 0;
+}
+.exsit-full-screen-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.full-screen-icon {
+  position: absolute;
+  top: 606rpx;
   right: 24rpx;
   width: 32px;
   height: 32px;
-  z-index: 1;
 }
 
-.bottom-part {
+.footer {
   position: absolute;
-  left: 0;
   bottom: 0;
-  padding: 0 0 calc(8px + env(safe-area-inset-bottom)) 8px;
   width: 100%;
-  overflow: hidden;
-  /* z-index: -1; */
-}
-.bottom-part.full-screen {
-  padding: 0 30px 8px;
 }
 
 /* 用户加入购物车，关注，下单 */
@@ -114,16 +101,6 @@
   opacity: 1;
   transform: translateX(0);
   transition: .3s linear;
-}
-
-.praise-animation {
-  position: absolute;
-  right: 0;
-  bottom: calc(112rpx + env(safe-area-inset-bottom));
-}
-.praise-animation.full-screen {
-  right: 30px;
-  bottom: 112rpx;
 }
 
 .btns-wrap {
@@ -173,7 +150,7 @@
 .praise-icon.hover {
   animation: scaleDraw 1s ease-in-out; 
 }
-@keyframes scaleDraw{
+@keyframes scaleDraw {
   0% {
     transform: scale(1);
   }
@@ -207,6 +184,18 @@
   width: 80px;
   height: 80px;
   opacity: 0;
+}
+@keyframes float {
+  0% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.8) translateY(-60px);
+    opacity: 0;
+  }
 }
 
 .login-btn {
