--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -122,3 +122,15 @@
   height: 80px;
   opacity: 0;
 }
+@keyframes float {
+  0% {
+    opacity: 1;
+  }
+  30% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.8) translateY(-60px);
+    opacity: 0;
+  }
+}
