--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -3,6 +3,10 @@
 <view class="note-item" bindtap="navToNoteDetail">
   <view class="cover-wrap">
     <image class="cover" mode="widthFix" src="{{item.imageList[0]}}" lazy-load />
+    <view class="private-tag row" wx:if="{{item.isPrivate}}">
+      <image class="private-icon" src="/images/private-icon.png" />
+      <text>私密</text>
+    </view>
     <view class="address-info" wx:if="{{item.address}}">
       <image class="address-icon" src="/images/address.png" />
       <text class="address-detail omit single-line">{{item.address}}</text>
