--- a/components/note-item/index.wxss
+++ b/components/note-item/index.wxss
@@ -2,6 +2,7 @@
   margin-bottom: 30rpx;
   width: 350rpx;
 }
+
 .cover-wrap {
   position: relative;
   font-size: 0;
@@ -11,6 +12,25 @@
 .cover {
   width: 350rpx;
 }
+
+.private-tag {
+  position: absolute;
+  top: 12rpx;
+  left: 12rpx;
+  padding: 0 12rpx;
+  height: 36rpx;
+  color: #fff;
+  font-size: 20rpx;
+  line-height: 1;
+  background: #EE3769;
+  border-radius: 6rpx;
+}
+.private-icon {
+  margin-right: 4rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+
 .address-info {
   position: absolute;
   left: 0;
