--- a/components/modal-mask/index.wxml
+++ b/components/modal-mask/index.wxml
@@ -1,1 +1,1 @@
-<view class="modal-mask" style="background: rgba(0, 0, 0, {{opcity}});" />
+<view class="modal-mask" style="background: rgba(0, 0, 0, {{opacity}});" />
