--- a/pages/subpages/home/media/live/live-play/components/play-room/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/play-room/index.wxml
@@ -39,12 +39,12 @@
             <view class="audience-action-tips {{audienceActionTips.type}} {{showAudienceActionTips ? 'show' : ''}}">{{audienceActionTips.message}}</view>
             <comment-showcase />
             <view class="btns-wrap row">
-              <view class="input-btn row">
+              <view class="input-btn row" catchtap="shopInputPopup">
                 <image class="chat-icon" src="../../../images/chat.png" />
                 <text>说点什么...</text>
               </view>
               <view class="row">
-                <view class="feature-btn row center" catchtap="showGoodsPopup" >
+                <view class="feature-btn row center" wx:if="{{roomInfo.anchorInfo.shopId}}" catchtap="showGoodsPopup" >
                   <image class="goods-icon" src="../../../images/goods.png" />
                 </view>
                 <view class="feature-btn row center" catchtap="showSharePopup" >
