--- a/pages/subpages/home/media/live/live-play/index.wxml
+++ b/pages/subpages/home/media/live/live-play/index.wxml
@@ -10,11 +10,23 @@
       lazy-load 
     />
     <block wx:if="{{index === curRoomIdx}}">
-      <play-room wx:if="{{item.status === 1}}" roomInfo="{{item}}" />
+      <play-room 
+        wx:if="{{item.status === 1}}" 
+        roomInfo="{{item}}"
+        bind:showInputPopup="showInputPopup"
+        bind:showGoodsPopup="showGoodsPopup"
+        bind:showSharePopup="showSharePopup"
+        bind:showNotifyModal="showNotifyModal"
+      />
       <live-notice wx:if="{{item.status === 3}}" roomInfo="{{item}}" />
     </block>
   </swiper-item>
 </swiper>
 
 <back-icon class="back-icon" style="top: {{statusBarHeight}}px;"/>
-<share-popup wx:if="{{shareModalVisible}}" roomInfo="{{roomList[curRoomIdx]}}" />
+<goods-popup wx:if="{{goodsPopupVisible}}" roomId="{{roomList[curRoomIdx].id}}" bind:hide="hideGoodsPopup" />
+<share-popup wx:if="{{sharePopupVisible}}" roomInfo="{{roomList[curRoomIdx]}}" bind:hide="hideSharePopup" />
+
+<modal-mask wx:if="{{inputPopupVisible || notifyModalVisible}}" opacity="{{inputPopupVisible ? 0 : 0.3}}" catchtap="hideModal" />
+<input-popup wx:if="{{inputPopupVisible}}" roomInfo="{{roomList[curRoomIdx]}}" bind:finish="hideModal" />
+<notify-modal  wx:if="{{notifyModalVisible}}" anchorId="{{roomList[curRoomIdx].anchorInfo.id}}" bind:hide="hideModal" />
