--- a/pages/subpages/home/media/video/index.wxml
+++ b/pages/subpages/home/media/video/index.wxml
@@ -42,7 +42,7 @@
   bind:hide="hideCommentPopup" 
 />
 
-<modal-mask wx:if="{{inputPopupVisible}}" opcity="{{0}}" bindtap="hideInputModal" />
+<modal-mask wx:if="{{inputPopupVisible}}" opacity="{{0}}" bindtap="hideInputModal" />
 <input-popup 
   wx:if="{{inputPopupVisible}}" 
   mediaType="{{2}}" 
