feat: 直播间商品

--- a/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
@@ -1,17 +1,14 @@
-<popup bind:hide="hide">
+<popup background="#f5f6f7" bind:hide="hide">
   <view class="goods-popup">
-    <view class="title">全部商品({{total}})</view>
+    <view class="popup-title row">全部商品（{{total}}）</view>
     <scroll-view class="goods-list" scroll-y bindscrolltolower="loadMore">
-      <view class="goods-item" wx:for="{{goodsList}}" wx:key="index" bindtap="navToGoodsDetail" data-id="{{item.id}}">
+      <view class="goods-item" wx:for="{{goodsList}}" wx:key="index" catchtap="navToGoodsDetail" data-id="{{item.id}}">
         <view class="goods-img-wrap">
           <image class="goods-img" src="{{item.image}}" />
-          <view class="goods-index {{item.isHot ? 'is-hot' : ''}}">{{index}}{{item.isHot ? '讲解中' : ''}}</view>
+          <view class="goods-index {{item.isHot ? 'is-hot' : ''}}">{{index + 1}}{{item.isHot ? '讲解中' : ''}}</view>
         </view>
         <view class="goods-info-wrap">
-          <view class="goods-name">
-            <text class="goods-tag">直播上新</text>
-            <text>{{item.name}}</text>
-          </view>
+          <view class="goods-name omit">{{item.name}}</view>
           <view class="goods-stock">库存：{{item.stock}}件</view>
           <view class="goods-price-wrap">
             <view class="goods-price">{{item.price}}</view>
