--- a/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxss
@@ -1,11 +1,4 @@
-.goods-popup {
-  padding-bottom: env(safe-area-inset-bottom);
-  background: #f5f6f7;
-}
-
-.title {
-  display: flex;
-  align-items: center;
+.popup-title {
   padding-left: 15px;
   height: 44px;
 }
