--- a/components/price-unit/index.wxml
+++ b/components/price-unit/index.wxml
@@ -1,4 +1,4 @@
-<view class="price-unit" style="color: {{color}}; font-size: {{fontSize}};">
+<view class="row baseline" style="color: {{color}}; font-size: {{fontSize}};">
   <text>{{symbol}}</text>
   <text style="margin-left: 2px; font-size: {{integerFontSize}}; font-weight: bold;">{{integerPart}}</text>
   <text wx:if="{{floatPart}}">.{{floatPart}}</text>
