--- a/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxss
@@ -1,6 +1,9 @@
 .popup-title {
   padding-left: 15px;
   height: 44px;
+  color: #333;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .goods-list {
@@ -30,14 +33,11 @@
 .goods-img {
   width: 96px;
   height: 96px;
-  background: yellow;
 }
 .goods-index {
   position: absolute;
   left: 0;
   top: 0;
-  display: flex;
-  align-items: center;
   padding: 0 7px;
   height: 16px;
   color: #fff;
@@ -46,8 +46,8 @@
   background: #000;
   border-radius: 10px 0px 6px 0px;
 }
-.goods-id.is-hot {
-  background: #FF3148;
+.goods-index.is-hot {
+  background: linear-gradient(90deg, #f71854 0%, #ee5e84 100%);
 }
 .goods-info-wrap {
   display: flex;
@@ -60,43 +60,20 @@
   color: #333;
   font-size: 14px;
 }
-.goods-name text{
-  display:inline-block;
-  vertical-align: middle;
-}
-.goods-tag {
-  margin-right: 2px;
-  padding: 1px 2px;
-  color: #fff;
-  font-size: 10px;
-  background: linear-gradient(270deg, #BCA26F 4%, #B98E4D 100%);
-  border-radius: 2px;
-}
+
 .goods-stock {
   margin-top: 4px;
   flex: 1;
   color: #999;
   font-size: 12px;
 }
-.goods-price-wrap {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-.goods-price {
-  color: #BA9243;
-  font-size: 16px;
-}
+
 .buy-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 64px;
   height: 24px;
-  color: #FFE5BD;
+  color: #fff;
   font-size: 12px;
-  line-height: 1;
-  background: linear-gradient(270deg, #404A5C 0%, #0F131A 99%);
+  background: #161F4E;
   border-radius: 12px;
 }
 
