--- a/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
@@ -30,23 +30,24 @@
           <image class="select-icon" wx:if="{{multiple}}" bindtap="select" data-index="{{index}}" src="{{item.checked  ? './images/selected.png' : './images/unselected.png'}}" />
           <view class="goods-img-wrap">
             <image class="goods-img" src="{{item.image}}" />
-            <view class="goods-id">{{index + 1}}</view>
+            <view class="goods-index row {{item.isHot ? 'is-hot' : ''}}">{{index + 1}}{{item.isHot ? ' · 讲解中' : ''}}</view>
           </view>
           <view class="goods-info-wrap">
             <view class="goods-name omit">{{item.name}}</view>
             <view class="goods-stock">库存：{{item.stock}}</view>
-            <view class="goods-price-wrap">
+            <view class="row between">
               <price-unit price="{{item.price}}" fontSize="12px" integerFontSize="16px" />
-              <view class="btns-wrap">
-                <view 
+              <view class="row">
+                <button 
                   class="recommend-btn {{item.isHot ? 'invalid' : ''}}" 
                   wx:if="{{curMenuIdx === 0}}" 
                   bindtap="{{item.isHot ? 'cancelHot' : 'setHot'}}" 
                   data-id="{{item.id}}"
                   data-index="{{index}}"
-                  >
-                    {{item.isHot ? '取消讲解' : '讲解'}}
-                  </view>
+                  hover-class="none"
+                >
+                  {{item.isHot ? '取消讲解' : '讲解'}}
+                </button>
                 <image class="goods-pick-btn" bindtap="{{curMenuIdx === 0 ? 'delistingGoods' : 'listingGoods'}}" data-id="{{item.id}}" src="{{curMenuIdx === 0 ? './images/down.png' : './images/up.png'}}" />
               </view>
             </view>
