--- a/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxss
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxss
@@ -1,14 +1,9 @@
-.goods-shelves-popup {
-  padding-bottom: env(safe-area-inset-bottom);
-  background: #f5f6f7;
-  border-radius: 15px 15px 0 0;
-}
-
 .header {
   padding: 6px 12px;
   background: #fff;
   border-radius: 15px 15px 0 0;
 }
+
 .menu-wrap {
   padding: 0 6px;
   height: 40px;
@@ -34,6 +29,7 @@
   border-radius: 1.5px;
   background: #3979BE;
 }
+
 .multiple-switch {
   color: #333;
   font-size: 14px;
@@ -105,12 +101,11 @@
   width: 96px;
   height: 96px;
 }
-.goods-id {
+
+.goods-index {
   position: absolute;
   left: 0;
   top: 0;
-  display: flex;
-  align-items: center;
   padding: 0 7px;
   height: 16px;
   color: #fff;
@@ -119,6 +114,10 @@
   background: #000;
   border-radius: 10px 0px 6px 0px;
 }
+.goods-index.is-hot {
+  background: linear-gradient(90deg, #f71854 0%, #ee5e84 100%);
+}
+
 .goods-info-wrap {
   display: flex;
   flex-direction: column;
@@ -126,54 +125,24 @@
   flex: 1;
   height: 96px;
 }
-.goods-info-wrap text{
-  display:inline-block;
-  vertical-align: middle;
-}
 .goods-name {
   color: #333;
   font-size: 14px;
 }
-.goods-tag {
-  margin-right: 2px;
-  padding: 1px 2px;
-  color: #fff;
-  font-size: 10px;
-  background: linear-gradient(270deg, #BCA26F 4%, #B98E4D 100%);
-  border-radius: 2px;
-}
+
 .goods-stock {
   margin-top: 4px;
   flex: 1;
   color: #999;
   font-size: 12px;
 }
-.goods-price-wrap {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-.goods-price {
-  color: #BA9243;
-  font-size: 16px;
-}
-.btns-wrap {
-  display: flex;
-  align-items: center;
 
-}
-.recommend-btn, .coupon-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.recommend-btn {
   padding: 0 10px;
   height: 24px;
-  font-size: 12px;
-  line-height: 1;
-  border-radius: 12px;
-}
-.recommend-btn {
   color: #fff;
+  font-size: 12px;
+  border-radius: 12px;
   background: linear-gradient(90deg, #f71854 0%, #ee5e84 100%);
 }
 .recommend-btn.invalid {
@@ -183,7 +152,7 @@
 
 .goods-pick-btn {
   box-sizing: content-box;
-  margin-right:-8px;
+  margin-right: -8px;
   padding: 2px 8px;
   width: 20px;
   height: 20px;
