feat: 发送热卖商品及时通讯消息

--- a/pages/subpages/home/media/live/live-play/components/play-room/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/play-room/index.wxml
@@ -69,7 +69,7 @@
 </view>
 
 <!-- 直播中断 -->
-<live-loading wx:if="{{liveLoading || liveBreak}}" />
+<live-loading wx:if="{{liveLoading}}" />
 
 <!-- 直播结束 -->
 <live-end wx:if="{{liveEnd}}" anchorInfo="{{roomInfo.anchorInfo}}" liveDuration="{{liveDuration}}" />
