--- a/pages/subpages/home/media/live/live-play/components/subscribe-modal/index.wxss
+++ b/pages/subpages/home/media/live/live-play/components/subscribe-modal/index.wxss
@@ -1,5 +1,4 @@
-
-.notify-modal {
+.subscribe-modal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -9,21 +8,21 @@
   background: #fff;
   border-radius: 20rpx;
 }
-.notify-title {
+.subscribe-title {
   margin: 30rpx auto 0;
   width: fit-content;
   color: #333;
   font-size: 36rpx;
   font-weight: bold;
 }
-.notify-content {
+.subscribe-content {
   margin: 80rpx 100rpx 0;
   color: #333;
   font-size: 32rpx;
   font-weight: 500;
   text-align: center;
 }
-.notify-btn {
+.subscribe-btn {
   display: flex;
   align-items: center;
   justify-content: center;
