--- a/pages/subpages/home/media/components/comment-popup/index.wxml
+++ b/pages/subpages/home/media/components/comment-popup/index.wxml
@@ -53,7 +53,7 @@
 <input-popup 
   wx:if="{{inputPopupVisible}}" 
   mediaType="{{mediaType}}" 
-  videoId="{{videoId}}" 
+  mediaId="{{mediaId}}" 
   commentId="{{commentId}}" 
   nickname="{{nickname}}" 
   bind:finish="finishComment"
