--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -57,7 +57,7 @@
 
   <view class="empty-illus" wx:if="{{!cartList.length}}">
     <view class="empty-desc">还没有宝贝哦，快去挑选喜欢的宝贝吧～</view>
-    <navigator class="visit-btn" url="/pages/mall/subpages/goods/index" hover-class="navigator-hover">去逛逛</navigator>
+    <navigator class="visit-btn" url="/pages/subpages/mall/goods/index" hover-class="none">去逛逛</navigator>
   </view>
 
   <view class="recommend-goods-wrap" wx:if="{{recommendGoodsList.length}}">
