--- a/pages/subpages/home/media/live/create-live/index.wxml
+++ b/pages/subpages/home/media/live/create-live/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <view class="card row between">
-    <view class="cover-uploader row center" bindtap="uploadCover">
+    <view class="cover-uploader row center" bindtap="cropCover">
       <block wx:if="{{!cover && !uploadCoverLoading}}">
         <image class="uploader-icon" src="https://img.ubo.vip/mp/sass/create-live/plus.png" />
         <view class="uploader-size">比例2:3</view>
@@ -12,7 +12,7 @@
       </block>
       <image wx:if="{{!uploadCoverLoading && cover}}" style="width: 100%; height: 100%;" src="{{cover}}" />
     </view>
-    <view class="share-cover-uploader row center" bindtap="uploadShareCover">
+    <view class="share-cover-uploader row center" bindtap="cropShareCover">
       <block wx:if="{{!shareCover && !uploadShareCoverLoading}}">
         <image class="uploader-icon" src="https://img.ubo.vip/mp/sass/create-live/plus.png" />
         <view class="uploader-size">比例1:1</view>
