--- a/pages/subpages/mall/goods/subpages/shop/index.wxml
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxml
@@ -4,7 +4,7 @@
   <view class="back-icon-wrap row" style="top: {{statusBarHeight}}px;">
     <back-icon />
   </view>
-  <image class="cover" mode="widthFix" src="{{shopInfo.cover || '/images/bg.jpg'}}" />
+  <image class="cover" mode="widthFix" src="{{shopInfo.cover || 'https://img.ubo.vip/tiddler/bg.jpg'}}" />
 </view>
 
 <view class="shop-info-wrap row">
