--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -7,20 +7,32 @@
   width: 100%;
   height: 44px;
   box-sizing: initial;
-  background: linear-gradient(90deg, #1895F5 0%, #097FE6 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  backdrop-filter: blur(100px);
   z-index: 100;
+}
+.bg-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(4px);
 }
 .user-avatar {
   margin-left: 20px;
   width: 26px;
   height: 26px;
   border-radius: 50%;
+  z-index: 1;
 }
 .user-name {
   margin-left: 8px;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
+  z-index: 1;
 }
 
 .container {
