--- a/pages/subpages/home/media/note/components/note-item/index.wxml
+++ b/pages/subpages/home/media/note/components/note-item/index.wxml
@@ -2,7 +2,7 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <view class="note-item">
-  <view class="author-info-wrap row" bindtap="navToUserCenter">
+  <view class="author-info-wrap row" bindtap="navToAuthorCenter">
     <image class="author-avatar avatar-default" src="{{item.authorInfo.avatar}}" lazy-load />
     <view class="name-wrap">
       <view class="author-name">{{item.authorInfo.nickname}}</view>
