--- a/pages/subpages/home/media/video/components/video-item/index.wxml
+++ b/pages/subpages/home/media/video/components/video-item/index.wxml
@@ -13,7 +13,7 @@
   bindloadedmetadata="setMode"
 >
   <view class="interactive-area">
-    <view class="author-avatar" catchtap="navToUserCenter">
+    <view class="author-avatar" catchtap="navToAuthorCenter">
       <image class="avatar-img avatar-default" src="{{item.authorInfo.avatar}}" lazy-load />
       <image class="follow-icon" wx:if="{{!item.isFollow}}" catchtap="followAuthor" src="./images/follow.png" />
     </view>
