--- a/pages/subpages/home/media/author-center/index.wxss
+++ b/pages/subpages/home/media/author-center/index.wxss
@@ -2,15 +2,18 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 44px;
   box-sizing: initial;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  backdrop-filter: blur(100px);
   z-index: 100;
+}
+.nav-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 .bg-cover {
   position: absolute;
@@ -19,20 +22,19 @@
   width: 100%;
   height: 100%;
   backdrop-filter: blur(4px);
+  z-index: -1;
 }
 .user-avatar {
-  margin-left: 20px;
-  width: 26px;
-  height: 26px;
+  margin-left: 8px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  z-index: 1;
 }
 .user-name {
   margin-left: 8px;
   color: #fff;
   font-size: 16px;
   font-weight: bold;
-  z-index: 1;
 }
 
 .container {
